--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,22 +1,13 @@
 name: hello_world
 
 environment:
-  sdk: ^3.8.0-0
-
-resolution: workspace
+  sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
 
-
 dev_dependencies:
-  flutter_driver:
-    sdk: flutter
   flutter_test:
     sdk: flutter
   test: any
-
-  webdriver: any
-
-# PUBSPEC CHECKSUM: mut18q
