--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,34 +8,48 @@ on:
       - main
       - master
       - develop
+
 name: "Build & Release"
+
 jobs:
   build:
     name: Build & Release
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v3
+
       - uses: actions/setup-java@v3
         with:
           distribution: 'zulu'
           java-version: '17'
+
       - uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
           architecture: x64
 
+      # Build Android APKs
       - run: flutter build apk --release --split-per-abi
+
+      # Build iOS (no signing)
+      - run: flutter build ios --no-codesign
+
+      # Create IPA (as before)
       - run: |
-          flutter build ios --no-codesign
           cd build/ios/iphoneos
           mkdir Payload
-          cd Payload
-          ln -s ../Runner.app
-          cd ..
+          cp -R Runner.app Payload/
           zip -r app.ipa Payload
+
+      # Create Appetize-compatible ZIP (zips .app directly)
+      - run: |
+          cd build/ios/iphoneos
+          zip -r appetize.zip Runner.app
+
+      # Push artifacts to GitHub Releases
       - name: Push to Releases
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "build/app/outputs/apk/release/*,build/ios/iphoneos/app.ipa"
+          artifacts: "build/app/outputs/apk/release/*,build/ios/iphoneos/app.ipa,build/ios/iphoneos/appetize.zip"
           tag: v1.0.${{ github.run_number }}
           token: ${{ secrets.TOKEN }}
